# glove

./: README.md  plan for now.txt  trainer.py  treefile.py
3dprints/v1/: Box v1.stl  Lid v1.stl  rasp cover v1.stl
binary files/: ProjectName.uf2  glove.uf2
onboard backup/: usb_descriptors.h
onboard code/: CMakeLists.txt  code.py
onboard code/glove/: CMakeLists.txt  constants.h  glove.c  glove.cc  imu_handler.c  imu_handler.h  model.cc  model.h  model_not_overfit.cc  model_overfit1.cc  nn_functions.cc  nn_functions.h  tusb_config.h  usb_descriptors.c  usb_descriptors.h
onboard code/hall effect/: hall effect.py
onboard code/hiddevice/: hid.py
onboard code/stablizer/: code.py  host.py  interrupt_test.py  stabilizer.py
schematics/: post-bluetooth-v1.fzz  pre-bluetooth-v1.fzz
training program/: ProjectName.uf2  SHABTAI_ABC_MASTERTABLE.json  code.py  count.backup copy.json  count.json  data.json  emulate_serial.py  fill_in_text.txt  generate_balancing_data.py  glove.ipynb  model.cc  model_LSTM.tflite  pangrams.txt  serial_test.py  trainer.py  val_data.txt
training program/model_LSTM/: fingerprint.pb  keras_metadata.pb  saved_model.pb
training program/model_LSTM/variables/: variables.data-00000-of-00001  variables.index
training program/onboard/: CMakeCache.txt  CMakeLists.txt  cmake_install.cmake  imu_handler.c  imu_handler.h  main.c
training program/onboard/ProjectName/: CMakeCache.txt  CMakeLists.txt  Makefile  ProjectName.uf2  imu_handler.c  main.c
training program/onboard/ProjectName/elf2uf2/: CMakeCache.txt  Makefile  cmake_install.cmake  elf2uf2
training program/onboard/ProjectName/elf2uf2/boot_uf2_headers/: Makefile
training program/onboard/ProjectName/pico-sdk/: cmake_install.cmake
training program/onboard/ProjectName/pico-sdk/docs/: cmake_install.cmake
training program/onboard/ProjectName/pico-sdk/src/: Makefile  cmake_install.cmake
training program/onboard/ProjectName/pico-sdk/tools/: cmake_install.cmake
training program/onboard/ProjectName/pioasm/: CMakeCache.txt  Makefile  cmake_install.cmake
training program/onboard/elf2uf2/tmp/: ELF2UF2Build-mkdirs.cmake
training program/onboard/pico-sdk/: Makefile
training program/onboard/pico-sdk/docs/: Makefile
training program/onboard/pico-sdk/src/common/: Makefile  cmake_install.cmake
training program/onboard/pico-sdk/src/rp2040/: cmake_install.cmake
training program/onboard/pico-sdk/src/rp2_common/: cmake_install.cmake
training program/onboard/pico-sdk/tools/: Makefile
utils/: treefile.py
(+122 files in other folders)
